Update codacy exclude path

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -20,6 +20,6 @@ engines:
 
 exclude_paths: [
     'doc/conf.py',
-    'esmvaltool/cmor/tables/**',
+    'esmvalcore/cmor/tables/**',
     'tests/**'
 ]
