--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -198,6 +198,7 @@ native6:
     era5cli: 'era5_{era5_name}*{era5_freq}.nc'
   output_file: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}'
   cmor_type: 'CMIP6'
+  cmor_default_table_prefix: 'CMIP6_'
 
 obs4mips:
   cmor_strict: false
