--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,20 @@
 ---
 version: 2
+
+aliases:
+  check_changes: &check_changes
+    name: Check changes
+    command: |
+      if (test "$CIRCLE_BRANCH" = master ||
+          git --no-pager diff --name-only origin/master... |
+          grep -q -E -f .circleci/install_triggers)
+      then
+        echo Running installation tests
+      else
+        echo Skipping installation tests
+        circleci step halt
+      fi
+
 jobs:
   test:
     # Run tests
@@ -40,6 +55,7 @@ jobs:
       - image: continuumio/miniconda3
     steps:
       - checkout
+      - run: *check_changes
       - restore_cache:
           key: python3-install-{{ .Branch }}
       - run:
@@ -117,6 +133,7 @@ jobs:
       - image: continuumio/miniconda3
     steps:
       - checkout
+      - run: *check_changes
       - run:
           command: |
             . /opt/conda/etc/profile.d/conda.sh
@@ -145,6 +162,7 @@ jobs:
       - image: continuumio/miniconda3
     steps:
       - checkout
+      - run: *check_changes
       - run:
           command: |
             . /opt/conda/etc/profile.d/conda.sh
@@ -190,9 +208,9 @@ workflows:
   commit:
     jobs:
       - test
-      - install:
-          requires:
-            - test
+      - install
+      - develop
+      - conda_build
       - documentation
   nightly:
     triggers:
