--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,8 @@ env =
 flake8-ignore =
     doc/conf.py ALL
 log_level = WARNING
+markers =
+    installation: test requires installation of dependencies
 
 [coverage:run]
 parallel = true
