--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,7 +10,8 @@ RUN apt-get update -y && apt-get install -y \
     unzip
 
 # install environment packages
-RUN pwd
+COPY .. /source
+WORKDIR /source
 RUN ls
 RUN conda env update --name base --file environment.yml
 RUN pip install .
