--- a/esmvalcore/config-user.yml
+++ b/esmvalcore/config-user.yml
@@ -40,6 +40,10 @@ profile_diagnostic: false
 
 # Rootpaths to the data from different projects (lists are also possible)
 rootpath:
+  # JASMIN: CMIP3: /badc/cmip3_drs/data/cmip3/output
+  # JASMIN: CMIP5: /badc/cmip5/data/cmip5/output1
+  # JASMIN: CMIP6: /badc/cmip6/data/CMIP6
+  # JASMIN: OBS: /group_workspaces/jasmin4/esmeval/obsdata-v2
   CMIP5: [~/cmip5_inputpath1, ~/cmip5_inputpath2]
   OBS: ~/obs_inputpath
   RAWOBS: ~/rawobs_inputpath
