--- a/esmvalcore/config-user.yml
+++ b/esmvalcore/config-user.yml
@@ -40,10 +40,16 @@ profile_diagnostic: false
 
 # Rootpaths to the data from different projects (lists are also possible)
 rootpath:
-  # JASMIN: CMIP3: /badc/cmip3_drs/data/cmip3/output
-  # JASMIN: CMIP5: /badc/cmip5/data/cmip5/output1
-  # JASMIN: CMIP6: /badc/cmip6/data/CMIP6
-  # JASMIN: OBS: /group_workspaces/jasmin4/esmeval/obsdata-v2
+  # JASMIN #
+  # CMIP3: /badc/cmip3_drs/data/cmip3/output
+  # CMIP5: /badc/cmip5/data/cmip5/output1
+  # CMIP6: /badc/cmip6/data/CMIP6
+  # OBS: /group_workspaces/jasmin4/esmeval/obsdata-v2
+  # DKRZ #
+  # CMIP3: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/CMIP3
+  # CMIP5: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/CMIP5_DKRZ
+  # CMIP6: /mnt/lustre02/work/ik1017/CMIP6/data/CMIP6
+  # OBS: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/OBS
   CMIP5: [~/cmip5_inputpath1, ~/cmip5_inputpath2]
   OBS: ~/obs_inputpath
   RAWOBS: ~/rawobs_inputpath
@@ -54,6 +60,7 @@ rootpath:
 # See config-developer.yml for definitions.
 drs:
   # JASMIN: BADC
+  # DKRZ: DKRZ
   CMIP5: default
   CORDEX: default
   OBS: default
