--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -15,6 +15,4 @@ WORKDIR /source
 RUN ls
 RUN conda env update --name base --file environment.yml
 RUN pip install -e .[develop]
-RUN pip freeze
-RUN pip uninstall esmvalcore
-RUN pip freeze
+RUN pip uninstall esmvalcore -y
