--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
             pip freeze > /logs/requirements.txt
             # Test installation
             python setup.py test
-            esmvaltool -h
+            esmvaltool --help
       - save_cache:
           key: python3-install-{{ .Branch }}
           paths:
@@ -150,7 +150,7 @@ jobs:
             conda env export > /logs/environment.yml
             pip freeze > /logs/requirements.txt
             # Test installation
-            esmvaltool -h
+            esmvaltool --help
             python setup.py test
       - store_artifacts:
           path: /logs
@@ -200,7 +200,7 @@ jobs:
             # Log versions
             conda env export > /logs/environment.yml
             # Test installation
-            esmvaltool -h
+            esmvaltool --help
             python -c 'from esmvalcore import *; print(__version__)'
 
 workflows:
