--- a/esmvalcore/config-user.yml
+++ b/esmvalcore/config-user.yml
@@ -82,11 +82,20 @@ profile_diagnostic: false
 #  CMIP6: /mnt/lustre02/work/ik1017/CMIP6/data/CMIP6
 #  CMIP5: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/CMIP5_DKRZ
 #  CMIP3: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/CMIP3
+#  CORDEX: /mnt/lustre02/work/ik1017/C3SCORDEX/data/c3s-cordex/output
 #  OBS: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/OBS
+#  OBS6: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/OBS
+#  obs4mips: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/OBS 
+#  ana4mips: /mnt/lustre02/work/bd0854/DATA/ESMValTool2/OBS 
 #drs:
 #  CMIP6: DKRZ
 #  CMIP5: DKRZ
 #  CMIP3: DKRZ
+#  CORDEX: DKRZ
+#  OBS: DKRZ
+#  OBS6: DKRZ
+#  obs4mips: DKRZ
+#  ana4mips: DKRZ
 
 # Site-specific entries: ETHZ
 # Uncomment the lines below to locate data at ETHZ
