--- a/esmvalcore/config-developer.yml
+++ b/esmvalcore/config-developer.yml
@@ -191,10 +191,10 @@ OBS6:
 native6:
   cmor_strict: false
   input_dir:
-    default: 'Tier{tier}/{dataset}'
+    default: '{dataset}/{latestversion}/{frequency}/{short_name}'
     era5cli: 'Tier{tier}/{dataset}'
   input_file:
-    default: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}[_.]*nc'
+    default: '*.nc'
     era5cli: 'era5_{era5_name}*{era5_freq}.nc'
   output_file: '{project}_{dataset}_{type}_{version}_{mip}_{short_name}'
   cmor_type: 'CMIP6'
