--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,18 +3,15 @@ FROM continuumio/miniconda3
 # update the conda packages
 RUN conda update -y conda pip
 
-# install development tools
-RUN apt-get update -y && apt-get install -y \
-    build-essential \
-    curl \
-    unzip
 
 # install environment packages
-COPY . /source
-WORKDIR /source
+COPY . /home/root/source
+WORKDIR /home/root/source
 RUN ls
 RUN conda env update --name base --file environment.yml
 RUN pip install .
+RUN conda clean --all -y
+RUN rm -r /home/root/source
 
 # run tests
 RUN esmvaltool -h
