--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -3,17 +3,16 @@ FROM continuumio/miniconda3
 # update the conda packages
 RUN conda update -y conda pip
 
-# install development tools
-RUN apt-get update -y && apt-get install -y \
-    build-essential \
-    curl \
-    unzip
+# Copy source
+COPY . /home/root/source
+WORKDIR /home/root/source
 
-# install environment packages
-COPY . /source
-WORKDIR /source
-RUN ls
+# Install
+RUN apt-get update -y && apt-get install -y build-essential
 RUN conda env update --name base --file environment.yml
 RUN pip install -e .[develop]
 RUN pip uninstall esmvalcore -y
-RUN rm -r /source
+
+# Clean up
+RUN rm -r /home/root/source
+RUN conda clean --all -y
