--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,3 +1,5 @@
+# To build this container, go to ESMValCore root folder and execute :
+# docker build -t ${TAG_OF_YOUR_CHOICE} . -f docker/Dockerfile.dev
 FROM continuumio/miniconda3
 
 # update the conda packages
