--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,14 +120,14 @@ jobs:
       - run:
           command: |
             . /opt/conda/etc/profile.d/conda.sh
-            set -x
             mkdir /logs
             # Install
             # conda update -y conda > /logs/conda.txt 2>&1
             conda env update >> /logs/conda.txt 2>&1
-            set +x; conda activate esmvaltool; set -x
-            conda install -yS r-base r-yaml ncl -c conda-forge
+            conda activate esmvaltool
             pip install -e .[develop] > /logs/install.txt 2>&1
+            # install additional requirements for running all tests
+            conda install -yS r-base r-yaml ncl -c conda-forge
             # Log versions
             dpkg -l > /logs/versions.txt
             conda env export > /logs/environment.yml
