--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
 
 dependencies:
   - esmpy
+  - hdf5>1.10.5  # try avert segfault from netCDF4.Dataset
   - iris>=2.2.1
   - graphviz
   - gcc_linux-64
