Update docker recipe (#603)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,16 +1,19 @@
+# To build this container, go to ESMValCore root folder and execute :
+# docker build -t ${TAG_OF_YOUR_CHOICE} . -f docker/Dockerfile
 FROM continuumio/miniconda3
 
 # update the conda packages
 RUN conda update -y conda pip
 
-# install development tools
-RUN apt-get update -y && apt-get install -y \
-    build-essential \
-    curl \
-    unzip
 
 # install environment packages
-RUN conda install -c conda-forge -c esmvalgroup -c birdhouse esmvaltool
+COPY . /home/root/source
+WORKDIR /home/root/source
+RUN ls
+RUN conda env update --name base --file environment.yml
+RUN pip install .
+RUN conda clean --all -y
+RUN rm -r /home/root/source
 
 # run tests
 RUN esmvaltool -h
