--- a/.github/workflows/action-ubuntu.yml
+++ b/.github/workflows/action-ubuntu.yml
@@ -31,6 +31,7 @@ jobs:
       - run: python -V
       - run: conda env create -n test_install -f environment.yml
       - run: export PATH=/usr/share/miniconda/bin:$PATH
-      - run: conda activate test_install
+      - run: python -V
+      - run: source activate test_install
       - run: pip install fire fiona nc-time-axis numba prov[dot] yamale
       - run: pip install --index-url https://test.pypi.org/simple/ --no-deps esmvalcore
