--- a/.github/workflows/action-osx.yml
+++ b/.github/workflows/action-osx.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           update-conda: true
           python-version: ${{ matrix.python-version }}
-          conda-channels: anaconda, conda-forge, esmvalgroup
+          conda-channels: conda-forge, esmvalgroup
       - run: conda --version
       - run: which conda
       - run: which python
