--- a/.github/workflows/action-win.yml
+++ b/.github/workflows/action-win.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           update-conda: true
           python-version: ${{ matrix.python-version }}
-          conda-channels: anaconda, conda-forge, esmvalgroup
+          conda-channels: conda-forge, esmvalgroup
       - run: conda --version
       - run: which python
       - run: conda env create -n test_install -f environment.yml
