--- a/.github/workflows/action-osx.yml
+++ b/.github/workflows/action-osx.yml
@@ -31,7 +31,8 @@ jobs:
       - run: python -V
       - run: conda env create -n test_install -f environment.yml
       - run: export PATH=/usr/local/miniconda/bin:$PATH
-      - run: python -V
       - run: source activate test_install
-      - run: pip install fire fiona nc-time-axis numba prov[dot] yamale
-      - run: pip install --index-url https://test.pypi.org/simple/ --no-deps esmvalcore
+      - run: python -V
+      - run: pip install esmvalcore
+      - run: esmvaltool --help
+      - run: esmvaltool --version
