--- a/.github/workflows/action-ubuntu.yml
+++ b/.github/workflows/action-ubuntu.yml
@@ -31,9 +31,8 @@ jobs:
       - run: python -V
       - run: conda env create -n test_install -f environment.yml
       - run: export PATH=/usr/share/miniconda/bin:$PATH
-      - run: source activate test_install
-      - run: /usr/share/miniconda/bin/conda list numpy
-      - run: /usr/share/miniconda/bin/conda list cartopy
+      - run: export PATH=/usr/share/miniconda/envs/test_install/lib/python*/site-packages:$PATH
+      - run: export PATH=/usr/share/miniconda/envs/test_install/bin:$PATH
       - run: python -V
       - run: pip install esmvalcore
       - run: esmvaltool --help
