--- a/.github/workflows/action-ubuntu.yml
+++ b/.github/workflows/action-ubuntu.yml
@@ -32,6 +32,7 @@ jobs:
       - run: conda env create -n esmvaltool -f environment.yml
       - run: source activate esmvaltool
       - run: python -V
+      - run: pip install numpy
       - run: pip install cartopy
       - run: pip install esmvalcore
       - run: esmvaltool --help
