--- a/.github/workflows/action-ubuntu.yml
+++ b/.github/workflows/action-ubuntu.yml
@@ -29,4 +29,4 @@ jobs:
       - run: conda install -c conda-forge compilers esmpy iris graphviz python-stratify
       - run: pip install esmvalcore
       - run: esmvaltool --help
-      - run: esmvaltool --version
+      - run: esmvaltool version
