--- a/.github/workflows/action-ubuntu.yml
+++ b/.github/workflows/action-ubuntu.yml
@@ -20,13 +20,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup conda
+        shell: bash -l {0}
         uses: s-weigand/setup-conda@v1
         with:
           update-conda: true
           python-version: ${{ matrix.python-version }}
           conda-channels: conda-forge, esmvalgroup
       - run: conda --version
-      - run: conda install -c conda-forge compilers esmpy iris graphviz python-stratify
+      - run: conda env create -n esmvaltool -f environment.yml  # compilers esmpy iris graphviz python-stratify
+      - run: conda activate esmvaltool
       - run: pip install esmvalcore
       - run: esmvaltool --help
       - run: esmvaltool version
