--- a/.github/workflows/action-ubuntu.yml
+++ b/.github/workflows/action-ubuntu.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Test Installation from PyPi on Ubuntu
+name: Test Installation from PyPi
 
 on:
   push:
@@ -25,7 +25,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
           miniconda-version: "latest"
       - name: Install esmvalcore
-        shell: bash -l {0}
       - run: |
           conda --version
           pip install esmvalcore
