--- a/.github/workflows/action-install-from-pypi.yml
+++ b/.github/workflows/action-install-from-pypi.yml
@@ -1,13 +1,12 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+# Install esmvalcore from PyPi on different OS's
 
-name: Test Installation from PyPi
+name: PyPi Install
 
 on:
   push:
-    branches: [ master ]
+    branches: [ github-actions ]
   pull_request:
-    branches: [ master ]
+    branches: [ github-actions ]
 
 jobs:
   run-on-linux:
