--- a/.github/workflows/action-install-from-pypi.yml
+++ b/.github/workflows/action-install-from-pypi.yml
@@ -7,14 +7,39 @@ on: push
 jobs:
   linux:
     runs-on: "ubuntu-latest"
-    name: Linux Python3.6
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+    name: Linux Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
       - uses: goanpeca/setup-miniconda@v1
         with:
           activate-environment: esmvaltool
           environment-file: environment.yml
-          python-version: 3.6
+          python-version: ${{ matrix.python-version }}
+          miniconda-version: "latest"
+          channels: conda-forge
+      - shell: bash -l {0}
+        run: |
+          conda --version
+          pip install esmvalcore
+          esmvaltool --help
+          esmvaltool version
+
+  osx:
+    runs-on: "macos-latest"
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+    name: OSX Python ${{ matrix.python-version }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: goanpeca/setup-miniconda@v1
+        with:
+          activate-environment: esmvaltool
+          environment-file: environment.yml
+          python-version: ${{ matrix.python-version }}
           miniconda-version: "latest"
           channels: conda-forge
       - shell: bash -l {0}
