--- a/.github/workflows/action-install-from-source.yml
+++ b/.github/workflows/action-install-from-source.yml
@@ -1,4 +1,4 @@
-# Install esmvalcore from PyPi on different OS's
+# Install esmvalcore from source on different OS's
 # and different Python version; test locally with
 # act: https://github.com/nektos/act
 
