--- a/.github/workflows/properties/action.properties.yml
+++ b/.github/workflows/properties/action.properties.yml
@@ -1,6 +1,6 @@
 {
-    "name": "Python package",
-    "description": "Create and test a Python package on multiple Python versions.",
+    "name": "ESMValCore",
+    "description": "Install (PyPi and source) and test ESMValCore.",
     "iconName": "python",
     "categories": ["Python"]
 }
