added notes and correct syntax

--- a/.github/workflows/action-install-from-source.yml
+++ b/.github/workflows/action-install-from-source.yml
@@ -3,6 +3,11 @@
 # act: https://github.com/nektos/act
 # Example how to setup conda workflows:
 # https://github.com/marketplace/actions/setup-miniconda
+# Notes:
+#  - you can group commands with | delimiter (or &&) but those will be run
+#    in one single call; declaring the shell variable makes the action run each
+#    command separately (better for debugging);
+#  - can try multiple shells eg pwsh or cmd /C CALL {0} (but overkill for now!);
 
 name: Source Install
 
@@ -26,9 +31,13 @@ jobs:
           channels: conda-forge
       - shell: bash -l {0}
         run: conda --version
+      - shell: bash -l {0}
         run: python -V
+      - shell: bash -l {0}
         run: pip install -e .[develop]
+      - shell: bash -l {0}
         run: esmvaltool --help
+      - shell: bash -l {0}
         run: esmvaltool version
 
   osx:
@@ -48,7 +57,11 @@ jobs:
           channels: conda-forge
       - shell: bash -l {0}
         run: conda --version
+      - shell: bash -l {0}
         run: python -V
+      - shell: bash -l {0}
         run: pip install -e .[develop]
+      - shell: bash -l {0}
         run: esmvaltool --help
+      - shell: bash -l {0}
         run: esmvaltool version
