--- a/.github/workflows/action-install-from-conda.yml
+++ b/.github/workflows/action-install-from-conda.yml
@@ -51,6 +51,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: goanpeca/setup-miniconda@v1
         with:
+          activate-environment: esmvalcore
           python-version: ${{ matrix.python-version }}
           miniconda-version: "latest"
           channels: esmvalgroup,conda-forge
