bring back all Pythons

--- a/.github/workflows/action-install-from-conda.yml
+++ b/.github/workflows/action-install-from-conda.yml
@@ -45,7 +45,7 @@ jobs:
     runs-on: "macos-latest"
     strategy:
       matrix:
-        python-version: [3.6]  # 3.7, 3.8
+        python-version: [3.6, 3.7, 3.8]
     name: OSX Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
