Improve build caching

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,11 @@
-# To build this container, go to ESMValCore root folder and execute :
-# docker build -t ${TAG_OF_YOUR_CHOICE} . -f docker/Dockerfile
+# To build this container, go to ESMValCore root folder and execute:
+# docker build -t esmvalcore:latest . -f docker/Dockerfile
 FROM continuumio/miniconda3
 
-COPY . /src/ESMValCore
 WORKDIR /src/ESMValCore
+COPY environment.yml .
 RUN conda update -y conda pip && conda env update --name base --file environment.yml && conda clean --all -y
+COPY . .
 RUN pip install . && pip cache purge
 
 ENTRYPOINT ["esmvaltool"]
-CMD ["-h"]
