--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,9 +1,9 @@
-# To build this container, go to ESMValCore root folder and execute :
-# docker build -t ${TAG_OF_YOUR_CHOICE} . -f docker/Dockerfile.dev
+# To build this container, go to ESMValCore root folder and execute:
+# docker build -t esmvalcore:development . -f docker/Dockerfile.dev
 FROM continuumio/miniconda3
 
-COPY . /src/ESMValCore
 WORKDIR /src/ESMValCore
-
+COPY environment.yml .
 RUN conda update -y conda pip && conda env update --name base --file environment.yml && conda clean --all -y
+COPY . .
 RUN pip install .[test] && pip uninstall esmvalcore -y && pip cache purge
