introduce fail fast to false so all tests run

--- a/.github/workflows/action-install-from-conda.yml
+++ b/.github/workflows/action-install-from-conda.yml
@@ -20,6 +20,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
+      fail-fast: false
     name: Linux Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
@@ -45,7 +46,8 @@ jobs:
     runs-on: "macos-latest"
     strategy:
       matrix:
-        python-version: [3.6, 3.7]  # 3.8 not avail yet
+        python-version: [3.6, 3.7, 3.8]  # 3.8 not avail yet
+      fail-fast: false
     name: OSX Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
