--- a/.github/workflows/action-install-from-pypi.yml
+++ b/.github/workflows/action-install-from-pypi.yml
@@ -32,6 +32,8 @@ jobs:
     name: Linux Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: github-actions
       - uses: goanpeca/setup-miniconda@v1
         with:
           activate-environment: esmvaltool
@@ -59,6 +61,8 @@ jobs:
     name: OSX Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: github-actions
       - uses: goanpeca/setup-miniconda@v1
         with:
           activate-environment: esmvaltool
